# rpi-amp

./: CMakeLists.txt  README.md  client  copied_types.h  drivers.h  example  main.c  server  test_clnt.c
examples/: example2.c
